<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ikhateeb.feedbackform.MainActivity"
    android:background="@drawable/background">


    <ImageView
        android:id="@+id/HLPR_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/hlpr_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo_hlpr" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="57dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/text_soon"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HLPR_logo" />


    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/subjectEditText"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_name"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_phone"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subjectEditText" />

    <EditText
        android:id="@+id/promoEditText"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:background="#ffffff"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/input_promo"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

    <Button
        android:id="@+id/sendButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="280dp"
        android:layout_height="56dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/get_free_hlpr"
        android:textColor="#3bd03e"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

</android.support.constraint.ConstraintLayout>
