<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ikhateeb.feedbackform.caledner"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="100"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="100"
            android:layout_gravity="center_horizontal">
                <ImageView
                    android:id="@+id/HLPR_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:contentDescription="@string/hlpr_logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_logo_hlpr"
                    android:layout_gravity="center_horizontal"
                        android:layout_weight="25"
                />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center"
                    android:text="@string/text_calender"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                        android:layout_weight="75"
                />
        </LinearLayout>

        <DatePicker
            android:id="@+id/simpleDatePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="0dp"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="#ffffff"
            android:datePickerMode="calendar"
            android:endYear="2017"
            android:scaleX=".9"
            android:scaleY=".9"
            android:layout_weight="25"

            />

        <Button
            android:id="@+id/calButton"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ffffff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/confirm_date"
            android:textColor="#3bd03e"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleDatePicker"
            tools:layout_marginBottom="10dp"
                android:layout_weight="20"
            android:onClick="SetDate"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
