<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ikhateeb.feedbackform.CleaningDetails"
    android:background="@color/colorPrimary"
    android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:onClick="HideKeyboard">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="100">

            <ImageView
                android:id="@+id/HLPR_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="25"
                android:contentDescription="@string/hlpr_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_logo_hlpr" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_weight="75"
                android:text="@string/text_cleaning_details"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:text="@string/input_Address_Details"
                android:textColor="#ffffff"
                android:textSize="25sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/spinnerAppSize"
                style="@style/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:spinnerMode="dialog"

                />

            <Spinner
                android:id="@+id/spinnerCity"
                style="@style/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinnerRegion"
                style="@style/spinnerItemStyle"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="Bld Number"
                android:spinnerMode="dialog" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:weightSum="100">

                <EditText
                    android:id="@+id/editTextBuilding"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:background="#ffffff"
                    android:hint="Bld Number"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

                <EditText
                    android:id="@+id/editTextFloor"
                    android:layout_width="wrap_content"
                    android:layout_height="56dp"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:background="#ffffff"
                    android:hint="Floor"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:layout_constraintHorizontal_bias="0.502"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextAddress"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_gravity="left"
                android:background="#ffffff"
                android:hint="Street"
                android:inputType="textPersonName"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/messageEditText" />

            <Button
                android:id="@+id/sendButton"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="280dp"
                android:layout_height="56dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:background="#ffffff"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/get_free_hlpr"
                android:textColor="#3bd03e"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />
        </LinearLayout>
    </LinearLayout>



</ScrollView>